# fcp

./: .pre-commit.sh  Cargo.toml  LICENSE  README.md
.github/workflows/: continuous_integration.yml
benches/: baseline_benchmark.rs  fcp_benchmark.rs  linux_benchmark.rs
dev_utils/: Cargo.toml
dev_utils/src/: lib.rs
fixtures/: .gitignore  copy_into_symlink.json  copy_many_into.json  copy_many_into_destination_does_not_exist.json  copy_many_into_destination_is_not_directory.json  copy_many_into_permissions_error.json  copy_many_into_success.json  create_fixture.py  create_fixture.sh  deep_directory.json  empty_directory.json  fifo.json  large_files.json  partial_directory.json  regular_file.json  simple_directory.json  socket.json  symlink.json
src/: copy.rs  error.rs  filesystem.rs  lib.rs  main.rs  tests.rs
tests/: character_device.exp  tests.rs
