[package]
name = "fcp"
version = "0.2.0"
authors = ["Kevin Svetlitski <kevin_svetlitski@berkeley.edu>"]
edition = "2018"
repository = "https://github.com/Svetlitski/fcp"
license-file = "LICENSE"
readme = "README.md"
description = "A significantly faster alternative to the classic Unix cp(1) command"
keywords = ["copy", "unix", "shell", "utility", "fast"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["/fixtures/", "/.github/"]

[[bin]]
name = "fcp"
path = "src/main.rs"

[dependencies]
nix = "0.22.0"
rayon = "1.5.1"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
dev_utils = { path = "dev_utils" }

[[bench]]
name = "fcp_benchmark"
harness = false
