[package]
name = "dev_utils"
version = "0.1.0"
authors = ["Kevin Svetlitski <kevin_svetlitski@berkeley.edu>"]
edition = "2018"
license-file = "../LICENSE"
publish = false

[dependencies]
fcp = { path = "../" }
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["unbounded_depth"] }
lazy_static = "1.4.0"
rand_pcg = "0.3.1"
rand = "0.8.4"
